# cosmic-applet-timeplus

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT_STATE.md  INSTALL.md  README.md  README.pt-BR.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.4.md  TRANSLATIONS.md  create-release.sh  create_i18n.sh  dev.sh  install.sh  justfile
assets/sounds/: README.md
data/: com.system76.CosmicAppletTimePlus.desktop
i18n/de/: cosmic_applet_timeplus.ftl
i18n/en/: cosmic_applet_timeplus.ftl
i18n/es-ES/: cosmic_applet_timeplus.ftl
i18n/fr/: cosmic_applet_timeplus.ftl
i18n/it/: cosmic_applet_timeplus.ftl
i18n/ja/: cosmic_applet_timeplus.ftl
i18n/ko/: cosmic_applet_timeplus.ftl
i18n/pt-BR/: cosmic_applet_timeplus.ftl
i18n/ru/: cosmic_applet_timeplus.ftl
i18n/sr/: cosmic_applet_timeplus.ftl
i18n/zh-CN/: cosmic_applet_timeplus.ftl
i18n/zh-TW/: cosmic_applet_timeplus.ftl
src/: calendar.rs  config.rs  icons.rs  lib.rs  localize.rs  main.rs  panel.rs  paths.rs  popup.rs  subscriptions.rs  time.rs  timer.rs  weather.rs  window.rs
