[package]
name = "cosmic-applet-timeplus"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
chrono = { version = "0.4.42", features = ["clock", "unstable-locales"] }
chrono-tz = "0.10"
i18n-embed-fl = "0.10"
i18n-embed = { version = "0.16", features = ["fluent-system"] }
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["applet", "applet-token", "process"] }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
cosmic-config-derive = { git = "https://github.com/pop-os/libcosmic" }
rust-embed = "8"
tokio = { version = "1", features = ["full"] }
tracing-log = "0.2"
tracing-subscriber = "0.3"
tracing = "0.1"
icu = { version = "2.1.1", features = ["compiled_data"] }
zbus = "5"
timedate-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
logind-zbus = "5.3.2"

# Weather API dependencies  
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Timer notification
notify-rust = "4.11"
